--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     ]
   },
   "devDependencies": {
-    "tsx": "^4.20.6"
+    "@types/node": "^24.8.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
