--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.27.4",
     "axios": "^1.13.2",
     "chart.js": "^4.5.0",
+    "graphql": "^16.13.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.2.0",
